--- a/capitulos/Introduccion.tex
+++ b/capitulos/Introduccion.tex
@@ -10,10 +10,11 @@
 \section{Motivación}
 \label{sec:Motivacion}
 
-\noindent Motivación del trabajo a realizar.\todo{Ejemplo de TODO: a completar}
+\noindent Motivación del trabajo a realizar.
+%\todo{Ejemplo de TODO: a completar}
 
 El primer párrafo de cada sección no se indenta, los siguientes sí.
-Las referencias a un artículo del estado del arte se ponen así: El trabajo \cite{Agirre2009} bla bla.
+Las referencias a un artículo del estado del arte se ponen así: El trabajo  bla bla.
 
 La presente plantilla es meramente orientativa. Tanto los capítulos como las secciones de cada capítulo son simplemente una guía para ayudar al alumno en el proceso de escritura del trabajo final del máster, pero en ningún caso supone que los trabajos tengan que tener forzosamente esta estructura. La estructura del trabajo debe ser acordada por el alumno y su director/res, así como adecuarse a la temática abordada.
 
