Apartado 2.2 Detección misoginia

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -73,4 +73,121 @@
   year      = {2018},
 }
 
+@Misc{MisoginiaRAE,
+  author = {Definición Misoginia RAE},
+  title  = {http://lema.rae.es/dpd/srv/search?key=misoginia},
+  url    = {http://lema.rae.es/dpd/srv/search?key=misoginia},
+}
+
+@Misc{MachismoRAE,
+  author = {Definición Machismo RAE},
+  title  = {http://dle.rae.es/srv/search?m=30\&w=machismo},
+  url    = {http://dle.rae.es/srv/search?m=30&w=machismo},
+}
+
+@InProceedings{Anzovino2018,
+  author    = {Maria Anzovino, Elisabetta Fersini, and Paolo Rosso},
+  title     = {Automatic Identification and Classification of Misogynistic Language on Twitter},
+  booktitle = {Springer International Publishing AG, part of Springer Nature 2018},
+  year      = {2018},
+}
+
+@InProceedings{Fersini2018,
+  author    = {E. Fersini, P. Rosso, and M. Anzovino},
+  title     = {Overview of the Task on Automatic Misogyny Identication at IberEval 2018},
+  booktitle = {Proceedings of the Third Workshop on Evaluation of Human Language Technologies for Iberian Languages (IberEval 2018)},
+  year      = {2018},
+}
+
+@MastersThesis{Garazi2014,
+  author = {Garazi Urdangarin Aranbarri},
+  title  = {Cosificación de las adolescentes en las Redes Sociales Digitales, pág 43},
+  school = {Universidad del País Vasco},
+  year   = {2014},
+}
+
+@InProceedings{Giraldo1972,
+  author    = {Octavio Giraldo},
+  title     = {El machismo como fenómeno psicocultural},
+  booktitle = {Revista Latinoamericana de Psicología},
+  year      = {1972},
+}
+
+@Misc{AMI2018,
+  author = {https://amiibereval2018.wordpress.com/},
+  title  = {Automatic Misogyny Identification, IBEREVAL 2018},
+  year   = {2018},
+  url    = {https://amiibereval2018.wordpress.com},
+}
+
+@InProceedings{Canos2018,
+  author    = {Jose Sebastián Canós},
+  title     = {Misogyny identification through SVM at IberEval 2018},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Wahyu2018,
+  author    = {Endang Wahyu Pamungkas, Alessandra Teresa Cignarella, Valerio Basile, and Viviana Patti},
+  title     = {Exploiting Lexical Knowledge for Detecting Misogyny in English and Spanish Tweets},
+  booktitle = {IberEval2018},
+  year      = {2018},
+}
+
+@InProceedings{Ahluwalia2018,
+  author    = {Resham Ahluwalia, Evgeniia Shcherbinina, Edward Callow, Anderson Nascimento1, and Martine De Cock},
+  title     = {Detecting Misogynous Tweets},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Goenaga2018,
+  author    = {Goenaga, A. Atutxa, K. Gojenola, A. Casillas, A. Daz de Ilarraza, N. Ezeiza, M. Oronoz, A. Perez and O. Perez},
+  title     = {Automatic Misogyny Identification Using Neural Networks},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Shushkevich2018,
+  author    = {Elena Shushkevich, John Cardiff},
+  title     = {Classifying Misogynistic Tweets Using a Blended Model: The AMI Shared Task in IBEREVAL 2018},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Frenda2018,
+  author    = {Simona Frenda, Bilal Ghanem, and Manuel Montes-y-Gomez},
+  title     = {Exploration of Misogyny in Spanish and English tweets},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Liu2018,
+  author    = {Han Liu, Fatima Chiroma, and Mihaela Cocea},
+  title     = {Identification and Classication of MisogynousTweets Using Multi-classier Fusion},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Victor2018,
+  author    = {Victor Nina-Alcocer},
+  title     = {AMI at IberEval2018 Automatic Misogyny Identification in Spanish and English Tweets},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{AMIOverview2018,
+  author    = {E. Fersini, P. Rosso, and M. Anzovino},
+  title     = {Overview of the Task on Automatic Misogyny Identification at IberEval 2018},
+  booktitle = {IberEval 2018},
+  year      = {2018},
+}
+
+@InProceedings{Mauro2016,
+  author    = {De Mauro, T.},
+  title     = {Le parole per ferire},
+  booktitle = {Internazionale (2016)},
+  year      = {2016},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
