--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -189,7 +189,7 @@ Trabajo Fin de Máster: Título del Trabajo \\ [0.3em]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Resumen}
 \label{sec:Resumen}
-\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red social Twitter. En la actualidad, el abuso online se ha convertido en un gran problema, especialmente por la anonimidad an y interactividad de la web que facilita el incremento y permanencia de este tipo de abusos. Se trata de un campo en el que ha aumentado la producción científica enormemente durante este mismo año y donde se han desarrollado competiciones con gran participación por parte de la comunidad científica. A lo largo del trabajo, se presenta el ciclo completo para la recolección de datos, preprocesamiento y construcción del sistema de clasificación. Se desarrolla un sistema...
+\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. En la actualidad, el abuso online se ha convertido en un gran problema, especialmente por la anonimidad an y interactividad de la web que facilita el incremento y permanencia de este tipo de abusos. Se trata de un campo en el que ha aumentado la producción científica enormemente durante este mismo año y donde se han desarrollado competiciones con gran participación por parte de la comunidad científica. A lo largo del trabajo, se presenta el ciclo completo para la recolección de datos, preprocesamiento y construcción del sistema de clasificación. Se desarrolla un sistema...
 Se evalua... Los resultados demuestran ...\todo{Completar cuando se avance en el trabajo}
 Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 
